; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/extr_ip_dummynet.c_copy_si.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/extr_ip_dummynet.c_copy_si.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.copy_args = type { i32 }
%struct.dn_schk = type { i64, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@DN_HAVE_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.copy_args*, %struct.dn_schk*, i32)* @copy_si to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @copy_si(%struct.copy_args* %0, %struct.dn_schk* %1, i32 %2) #0 {
  %4 = alloca %struct.copy_args*, align 8
  %5 = alloca %struct.dn_schk*, align 8
  %6 = alloca i32, align 4
  store %struct.copy_args* %0, %struct.copy_args** %4, align 8
  store %struct.dn_schk* %1, %struct.dn_schk** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.dn_schk*, %struct.dn_schk** %5, align 8
  %8 = getelementptr inbounds %struct.dn_schk, %struct.dn_schk* %7, i32 0, i32 1
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = load i32, i32* @DN_HAVE_MASK, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %20

14:                                               ; preds = %3
  %15 = load %struct.dn_schk*, %struct.dn_schk** %5, align 8
  %16 = getelementptr inbounds %struct.dn_schk, %struct.dn_schk* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load %struct.copy_args*, %struct.copy_args** %4, align 8
  %19 = call i32 @dn_ht_scan(i64 %17, i32 (i64, %struct.copy_args*)* @copy_si_cb, %struct.copy_args* %18)
  br label %32

20:                                               ; preds = %3
  %21 = load %struct.dn_schk*, %struct.dn_schk** %5, align 8
  %22 = getelementptr inbounds %struct.dn_schk, %struct.dn_schk* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %31

25:                                               ; preds = %20
  %26 = load %struct.dn_schk*, %struct.dn_schk** %5, align 8
  %27 = getelementptr inbounds %struct.dn_schk, %struct.dn_schk* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = load %struct.copy_args*, %struct.copy_args** %4, align 8
  %30 = call i32 @copy_si_cb(i64 %28, %struct.copy_args* %29)
  br label %31

31:                                               ; preds = %25, %20
  br label %32

32:                                               ; preds = %31, %14
  ret i32 0
}

declare dso_local i32 @dn_ht_scan(i64, i32 (i64, %struct.copy_args*)*, %struct.copy_args*) #1

declare dso_local i32 @copy_si_cb(i64, %struct.copy_args*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
